# kb-template

./: .gitignore  AGENTS.md  README.md
.github/workflows/: organize.yml
ops/: pyproject.toml  setup.sh
ops/ci/: com.kb.organize.plist  crontab.example  scheduled-organize.sh
ops/docs/: CONCEPT.md
ops/rules/: KB_RULES.md  kb.rules.yml
ops/skills/kb-organize/: SKILL.md
ops/skills/kb-search/: SKILL.md
ops/skills/kb-update/: SKILL.md
ops/src/kb_repo_tools/: cli.py  frontmatter.py  notes.py  repo.py  timeutil.py  ulidutil.py
ops/tests/: test_cli_git_enforcement.py  test_cli_git_workflow.py  test_frontmatter.py  test_timeutil.py
